[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/Game.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 19.9502, 1, 1 )

[sub_resource type="ProceduralSky" id=2]
sun_latitude = 0.0

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "load"
length = 5.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:background_sky:sun_latitude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WorldEnvironment:environment:background_sky:sun_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.666667, 0.447059, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldEnvironment:environment:background_sky:sky_top_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.647059, 0.839216, 0.945098, 1 ), Color( 0.568627, 0.768627, 0.717647, 1 ) ]
}

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="SpawnEnemyTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnEnemyPositions" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )

[node name="Position3D2" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.35096, 0, -15 )

[node name="Position3D3" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -15 )

[node name="Position3D4" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.93535, 0, -15 )

[node name="Position3D5" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -15 )

[node name="Position3D6" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.45824, 0, -15 )

[node name="Position3D7" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.22714, 0, -15 )

[node name="Position3D8" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0733, 0, -15 )

[node name="Position3D9" type="Position3D" parent="SpawnEnemyPositions"]
transform = Transform( -0.990764, -0.135594, 0, 0.135594, -0.990764, 0, 0, 0, 1, -11.2141, 0, -15 )

[node name="DestroyEnemy" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.90695 )

[node name="CollisionShape" type="CollisionShape" parent="DestroyEnemy"]
shape = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
anims/load = SubResource( 4 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -819.0
margin_bottom = -480.0
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "RELOAD"

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "TIME:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_SpawnEnemyTimer_timeout"]
[connection signal="area_entered" from="DestroyEnemy" to="." method="_on_DestroyEnemy_area_entered"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
